--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,4 @@
----
-title: "Intro to R for BigCare 2024"
----
+# Overview {.unnumbered}
 
-This is a Quarto website.
+This is the overview. 
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
